Add "common" module and refactor project
Created "common" module.

Moved CDSHandler, including its unit tests, and LocaleData
from "txsdk" to " common" module. Refactored classes that
used it.

CDSHanlder now uses pure Java methods. Android references have
been removed or replaced by pure Java ones. A method has been added
for pushing strings to CDS.

Added TxPostData class to LocaleData.

Removed example unit and intrumented tests from "txnative" and "app".

Created CDSHanlderAndroid in "txsdk", which contains the async
method that was originally part of CDSHandler.