@@ -1,45 +1,40 @@
-package com.transifex.txnative;
+package com.transifex.common;
 
-import android.net.Uri;
-import android.os.AsyncTask;
-import android.util.Log;
 
 import com.google.gson.Gson;
 import com.google.gson.JsonSyntaxException;
 
+
+import net.moznion.uribuildertiny.URIBuilderTiny;
+
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.OutputStreamWriter;
+import java.io.Reader;
+import java.io.Writer;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
-import java.util.concurrent.RejectedExecutionException;
+import java.nio.charset.StandardCharsets;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
-import androidx.annotation.WorkerThread;
 
-class CDSHandler {
-
-    /**
-     * A callback that provides the results of {@link #fetchTranslations(String, FetchTranslationsCallback)}
-     * when the operation is complete.
-     */
-    interface FetchTranslationsCallback {
-
-        /**
-         * Called when the operation is complete.
-         * <p>
-         * If the operation fails, the translationMap will be empty.
-         *
-         * @param translationMap A {@link com.transifex.txnative.LocaleData.TranslationMap TranslationMap}
-         *                       holding the results.
-         */
-        @WorkerThread
-        void onComplete(@NonNull LocaleData.TranslationMap translationMap);
-    }
+/**
+ * CDSHandler enables pushing and pulling strings to/from the CDS.
+ */
+public class CDSHandler {
 
     public static final String CDS_HOST = "https://cds.svc.transifex.net";
 
     private static final String TAG = CDSHandler.class.getSimpleName();
+    private static final Logger LOGGER = Logger.getLogger(TAG);
 
     private static final int MAX_RETRIES = 20;
 
@@ -58,7 +53,7 @@ class CDSHandler {
     private final Gson mGson;
 
     /**
-     * Class that contains the result of {@link #fetchLocale(Uri, String)}.
+     * Class that contains the result of {@link #fetchLocale(URI, String)}.
      */
     private static class FetchLocaleResult {
         LocaleData.TxResponseData response;
@@ -79,7 +74,7 @@ class CDSHandler {
      * @param secret The API secret to use for connecting to the CDS.
      * @param csdHost The host of the Content Delivery Service.
      */
-    public CDSHandler(@NonNull String[] localeCodes,
+    public CDSHandler(@Nullable String[] localeCodes,
                       @NonNull String token, @Nullable String secret, @NonNull String csdHost) {
         mLocaleCodes = localeCodes;
         mToken = token;
@@ -90,61 +85,36 @@ class CDSHandler {
     }
 
     /**
-     *  Fetch translations from CDS.
-     *  <p>
-     *  The method is asynchronous. The callback is called on a background thread.
-     *
-     * @param localeCode  An optional locale to fetch translations from; if  set to <code>null</code>,
-     *                    it will fetch translations for the locale codes provided in the constructor.
-     * @param callback A callback function to call when the operation is complete.
-     */
-    public void fetchTranslations(@Nullable final String localeCode,
-                                  @NonNull final FetchTranslationsCallback callback) {
-        try {
-            AsyncTask.THREAD_POOL_EXECUTOR.execute(new Runnable() {
-                @Override
-                public void run() {
-                    LocaleData.TranslationMap result = fetchTranslationsInternal(localeCode);
-                    callback.onComplete(result);
-                }
-            });
-        }
-        catch (RejectedExecutionException exception) {
-            Log.e(TAG, "Could not execute background task: " + exception);
-            callback.onComplete(new LocaleData.TranslationMap(0));
-        }
-    }
-
-    /**
-     * The implementation that {@link #fetchTranslations(String, FetchTranslationsCallback)} calls
-     * in a background thread.
+     * Fetch translations from CDS.
      * <p>
      * The method is synchronous and should only run in a background thread.
      *
-     * @see #fetchTranslations(String, FetchTranslationsCallback)
+     * @param localeCode  An optional locale to fetch translations from; if  set to <code>null</code>,
+     *                    it will fetch translations for the locale codes provided in the constructor.
      */
     @NonNull
-    LocaleData.TranslationMap fetchTranslationsInternal(@Nullable String localeCode) {
+    public LocaleData.TranslationMap fetchTranslations(@Nullable String localeCode) {
         String[] fetchLocalCodes = (localeCode != null) ? new String[]{localeCode} : mLocaleCodes;
+        if (fetchLocalCodes == null) {
+            return new LocaleData.TranslationMap(0);
+        }
         LocaleData.TranslationMap translations = new LocaleData.TranslationMap(fetchLocalCodes.length);
 
-        Uri cdsHostURI = Uri.parse(mCdsHost).buildUpon().appendEncodedPath("content").build();
-
         // Check URL
-        URL cdsHostURL = null;
+        URI cdsContentURI = null;
         try {
-            cdsHostURL = new URL(cdsHostURI.toString());
-        } catch (MalformedURLException e) {
-            Log.e(TAG, "Invalid CDS host URL: " + cdsHostURI);
-        }
-        if (cdsHostURL == null) {
+            cdsContentURI = new URI(mCdsHost);
+            cdsContentURI = new URIBuilderTiny(cdsContentURI).appendPaths("content").build();
+            URL url = new URL(cdsContentURI.toString());
+        } catch (URISyntaxException | MalformedURLException e) {
+            LOGGER.log(Level.SEVERE, "Invalid CDS host URL: " + mCdsHost);
             return translations;
         }
 
         // For each locale
         HttpURLConnection lastConnection = null;
         for (String fetchLocalCode : fetchLocalCodes) {
-            FetchLocaleResult results = fetchLocale(cdsHostURI, fetchLocalCode);
+            FetchLocaleResult results = fetchLocale(cdsContentURI, fetchLocalCode);
             LocaleData.TxResponseData responseData = results.response;
             if (responseData!= null) {
                 translations.put(fetchLocalCode, new LocaleData.LocaleStrings(responseData.data));
@@ -171,13 +141,14 @@ class CDSHandler {
      * @return A {@link FetchLocaleResult} object containing data.
      */
     private @NonNull
-    FetchLocaleResult fetchLocale(Uri cdsHostURI, String localeCode) {
-        Uri uri = cdsHostURI.buildUpon().appendPath(localeCode).build();
+    FetchLocaleResult fetchLocale(URI cdsContentURI, String localeCode) {
+
         URL url = null;
         try {
+            URI uri  = new URIBuilderTiny(cdsContentURI).appendPaths(localeCode).build();
             url = new URL(uri.toString());
         } catch (MalformedURLException e) {
-            Log.e(TAG, "Invalid CDS host URL: " + cdsHostURI);
+            LOGGER.log(Level.SEVERE, "Invalid CDS host URL: " + cdsContentURI);
         }
         if (url == null) {
             return new FetchLocaleResult(null, null);
@@ -189,7 +160,7 @@ class CDSHandler {
             try {
                 connection = (HttpURLConnection) url.openConnection();
             } catch (IOException e) {
-                Log.e(TAG, "IOException when opening connection for locale " + localeCode + " : " + e);
+                LOGGER.log(Level.SEVERE, "IOException when opening connection for locale " + localeCode + " : " + e);
                 return new FetchLocaleResult(null, connection);
             }
             addHeaders(connection, false, null);
@@ -199,14 +170,15 @@ class CDSHandler {
                 int code = connection.getResponseCode();
                 switch (code) {
                     case 200: {
-                        String result = Utils.readInputStream(connection.getInputStream());
-                        connection.getInputStream().close();
-
                         LocaleData.TxResponseData responseData = null;
+                        Reader reader = new BufferedReader(new InputStreamReader(connection.getInputStream(), "UTF-8"));
                         try {
-                            responseData = mGson.fromJson(result, LocaleData.TxResponseData.class);
+                            responseData = mGson.fromJson(reader, LocaleData.TxResponseData.class);
                         } catch (JsonSyntaxException e) {
-                            Log.e(TAG, "Could not parse JSON response to object for locale " + localeCode);
+                            LOGGER.log(Level.SEVERE, "Could not parse JSON response to object for locale " + localeCode);
+                        }
+                        finally {
+                            connection.getInputStream().close();
                         }
 
                         return new FetchLocaleResult(responseData, connection);
@@ -215,11 +187,11 @@ class CDSHandler {
                         // try one more time
                         continue;
                     default:
-                        Log.e(TAG, "Server responded with code " + code + " for locale " + localeCode);
+                        LOGGER.log(Level.SEVERE, "Server responded with code " + code + " for locale " + localeCode);
                         return new FetchLocaleResult(null, connection);
                 }
             } catch (IOException e) {
-                Log.e(TAG, "IOException for locale " + localeCode + " : " + e);
+                LOGGER.log(Level.SEVERE, "IOException for locale " + localeCode + " : " + e);
 
                 // https://docs.oracle.com/javase/6/docs/technotes/guides/net/http-keepalive.html
                 try {
@@ -236,6 +208,77 @@ class CDSHandler {
     }
 
     /**
+     * Pushes the provided source strings to CDS.
+     * <p>
+     * The method is synchronous.
+     *
+     * @param postData The data containing the source strings and the purge value.
+     *
+     * @return <code>true</code> if data were pushed successfully, <code>false</code> otherwise.
+     */
+    public boolean postSourceStrings(@NonNull LocaleData.TxPostData postData) {
+        // Check URL
+        URL url = null;
+        try {
+            URI cdsContentURI = new URI(mCdsHost);
+            cdsContentURI = new URIBuilderTiny(cdsContentURI).appendPaths("content").build();
+            url = new URL(cdsContentURI.toString());
+        } catch (MalformedURLException | URISyntaxException e) {
+            LOGGER.log(Level.SEVERE, "Invalid CDS host URL: " + mCdsHost);
+            return false;
+        }
+
+        // Post data
+        HttpURLConnection connection = null;
+        try {
+            connection = (HttpURLConnection) url.openConnection();
+        } catch (IOException e) {
+            LOGGER.log(Level.SEVERE, "IOException when opening connection: " + e);
+            return false;
+        }
+
+        addHeaders(connection, true, null);
+
+        try {
+            connection.setDoOutput(true);
+            connection.setRequestMethod("POST");
+
+            Writer writer = new BufferedWriter(new OutputStreamWriter(connection.getOutputStream(), "UTF-8"));
+            mGson.toJson(postData, writer);
+            writer.close();
+
+            int code = connection.getResponseCode();
+            switch (code) {
+                case 200: {
+                    String result = Utils.readInputStream(connection.getInputStream());
+                    connection.getInputStream().close();
+
+                    //TODO: (optional) parse the JSON response and return it as an object
+                    // https://github.com/transifex/transifex-delivery/#push-content
+
+                    return true;
+                }
+                default:
+                    LOGGER.log(Level.SEVERE, "Server responded with code " + code);
+                    return false;
+            }
+        } catch (IOException e) {
+            LOGGER.log(Level.SEVERE, "IOException: " + e);
+
+            // https://docs.oracle.com/javase/6/docs/technotes/guides/net/http-keepalive.html
+            try {
+                String errorResponse = Utils.readInputStream(connection.getErrorStream());
+                connection.getErrorStream().close();
+            } catch (IOException ignored) {
+            }
+
+            return false;
+        } finally {
+            connection.disconnect();
+        }
+    }
+
+    /**
      * Adds headers to the provided HttpURLConnection
      *
      * @param connection the HttpURLConnection to add headers to
@@ -247,7 +290,8 @@ class CDSHandler {
         // No need to specify "Accept-Encoding" with "gzip", because HTTPURLConnection will add it
         // automatically and handle it transparently for us.
 
-        connection.addRequestProperty("Content-type", "application/json");
+        connection.addRequestProperty("Content-type", "application/json; charset=utf-8");
+
         if (withSecret) {
             connection.addRequestProperty("Authorization", "Bearer " + mToken + ":" + mSecret);
         }
